// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Config Agent proto for gRPC communications from controllers.
syntax = "proto3";

package protos;

import "google/longrunning/operations.proto";

option go_package = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/pkg/agents/config_agent/protos;protos";

service ConfigAgent {
  rpc DataPumpImport(DataPumpImportRequest)
      returns (google.longrunning.Operation);
  rpc DataPumpExport(DataPumpExportRequest)
      returns (google.longrunning.Operation);
  rpc GetParameterTypeValue(GetParameterTypeValueRequest)
      returns (GetParameterTypeValueResponse) {}
}

message GsmSecretReference {
  string project_id = 1;
  string secret_id = 2;
  string version = 3;
  string last_version = 4;
}

message User {
  string name = 1;
  // only being used for plaintext password scenario.
  // GSM doesn't use this field.
  string password = 2;
  repeated string privileges = 3;
  GsmSecretReference password_gsm_secret_ref = 4;
  // only being used for plaintext password scenario.
  // GSM doesn't use this field.
  string last_password = 5;
}

message DataPumpImportRequest {
  string pdb_name = 1;
  string db_domain = 2;
  // GCS path to input dump file
  string gcs_path = 3;
  // GCS path to output log file
  string gcs_log_path = 4;

  LROInput lro_input = 5;
}

message DataPumpExportRequest {
  string pdb_name = 1;
  string db_domain = 2;
  string object_type = 3;
  string objects = 4;
  string gcs_path = 5;
  string gcs_log_path = 6;
  LROInput lro_input = 7;
  string flashback_time = 8;
}

// LROInput is a common part of input requests for all Async operations.
message LROInput {
  string operation_id = 1;
}

message GetParameterTypeValueRequest {
  repeated string keys = 1;
}

message GetParameterTypeValueResponse {
  repeated string types = 1;
  repeated string values = 2;
}
